# IoT

./: .gitignore  .gitmodules  CMakeLists.txt  Firmware0_1.atsln  README.md
.github/workflows/: CI.yml  logicTest.yml  testAction.yml
Firmware0_1/: Firmware0_1.atsln  Firmware0_1.componentinfo.xml  Firmware0_1.cproj
Firmware0_1/Debug/: Firmware0_1.lss  Firmware0_1.srec  Makefile  makedep.mk
Firmware0_1/Firmware0_1/: Firmware0_1.componentinfo.xml  Firmware0_1.cproj  LoRaWANHandler.c  main.c
Firmware0_1/Firmware0_1/Debug/: Firmware0_1.lss  Firmware0_1.srec  Makefile  makedep.mk
Firmware0_1/Firmware0_1/Handlers/: 7segmentHandler.c
Firmware0_1/Firmware0_1/Logik/: Logik.c  Logik.h
Firmware0_1/Firmware0_1/sensor/: SensorReading.c  SensorReading.h
Firmware0_1/Firmware0_1/src/Logik/: Logik.c
Firmware0_1/Firmware0_1/src/sensor/: SensorReading.c
Firmware0_1/firmware_test/: CMakeLists.txt  test.cpp
Firmware0_1/firmware_test/FreeRTOS_defs/: FreeRTOS_FFF_MocksDeclaration.h
Firmware0_1/firmware_test/MockHfiler/: Mock_display_7seg.h
Firmware0_1/src/: LoRaWANHandler.c  main.c
Firmware0_1/src/Handlers/: 7segmentHandler.c  CommHandler.c  ModuleHandler.c  data_handler.c
Firmware0_1/src/Headers/: 7segmentHandler.h  CommHandler.h  DownLinkValidator.h  Logik.h  ModuleHandler.h  SensorReading.h  data_handler.h  util.h
Firmware0_1/src/Logik/: Logik.c
Firmware0_1/src/Validator/: DownLinkValidator.c
Firmware0_1/src/sensor/: SensorReading.c
Firmware0_1/src/util/: DownLinkValidator.c  util.c
Gtest_with_calc-3/: CMakelists.txt
Gtest_with_calc-3/Test/: CMakelists.txt  mytests.cpp
firmware/: readme.md
firmware_test/: CMakeLists.txt  CMakelists.txt  LogicTest.cpp  LogikTest.cpp  ModuleHandlerTest.cpp  test.cpp  test_co2.cpp
test/: CMakelists.txt  tests_SEP4-IOT.cpp
test/FreeRTOS_defs/: FreeRTOS.h  FreeRTOS_FFF_MocksDeclaration.h  FreeRTOS_FFF_MocksDefinitions.cpp  event_groups.h  message_buffer.h  queue.h  semphr.h  task.h  timers.h
